--- a/Civitates/SearchPopover.storyboard
+++ b/Civitates/SearchPopover.storyboard
@@ -1,9 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Search Table View Controller-->
@@ -15,54 +18,44 @@
                         <viewControllerLayoutGuide type="bottom" id="cHs-s6-4rF"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="zew-xw-YyT">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="u0J-uv-zGb">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HE4-kh-mXq">
+                                <rect key="frame" x="0.0" y="20" width="320" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="5rd-Uv-LvG"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="u0J-uv-zGb">
+                                <rect key="frame" x="0.0" y="70" width="320" height="498"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="dataSource" destination="KHt-9S-t5i" id="I7d-yC-Y2l"/>
                                     <outlet property="delegate" destination="KHt-9S-t5i" id="TAf-Ne-XPr"/>
                                 </connections>
                             </tableView>
-                            <searchBar contentMode="redraw" placeholder="city name" translatesAutoresizingMaskIntoConstraints="NO" id="dKE-sg-DJg">
-                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
-                                <connections>
-                                    <outlet property="delegate" destination="KHt-9S-t5i" id="9nq-GI-2ga"/>
-                                </connections>
-                            </searchBar>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="dKE-sg-DJg" firstAttribute="leading" secondItem="zew-xw-YyT" secondAttribute="leadingMargin" constant="-16" id="7eQ-Pr-fGK"/>
-                            <constraint firstItem="cHs-s6-4rF" firstAttribute="top" secondItem="u0J-uv-zGb" secondAttribute="bottom" id="MRx-o4-X2N"/>
-                            <constraint firstItem="dKE-sg-DJg" firstAttribute="top" secondItem="mrr-2H-jMt" secondAttribute="bottom" id="RYC-4q-wTp"/>
-                            <constraint firstItem="u0J-uv-zGb" firstAttribute="top" secondItem="dKE-sg-DJg" secondAttribute="bottom" id="pXi-LT-FON"/>
-                            <constraint firstItem="u0J-uv-zGb" firstAttribute="leading" secondItem="zew-xw-YyT" secondAttribute="leadingMargin" constant="-16" id="v39-f5-exZ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="dKE-sg-DJg" secondAttribute="trailing" constant="-16" id="xQV-9g-xDm"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="u0J-uv-zGb" secondAttribute="trailing" constant="-16" id="zpC-gr-pJu"/>
+                            <constraint firstItem="u0J-uv-zGb" firstAttribute="centerX" secondItem="zew-xw-YyT" secondAttribute="centerX" id="3sE-Yf-Pxr"/>
+                            <constraint firstItem="u0J-uv-zGb" firstAttribute="leading" secondItem="zew-xw-YyT" secondAttribute="leading" id="8D1-ie-BHC"/>
+                            <constraint firstItem="HE4-kh-mXq" firstAttribute="leading" secondItem="zew-xw-YyT" secondAttribute="leading" id="MN7-QH-8Ma"/>
+                            <constraint firstItem="u0J-uv-zGb" firstAttribute="top" secondItem="HE4-kh-mXq" secondAttribute="bottom" id="X5Q-To-0Y2"/>
+                            <constraint firstItem="HE4-kh-mXq" firstAttribute="top" secondItem="mrr-2H-jMt" secondAttribute="bottom" id="hY3-KI-SiU"/>
+                            <constraint firstItem="cHs-s6-4rF" firstAttribute="top" secondItem="u0J-uv-zGb" secondAttribute="bottom" id="yn2-pf-jpk"/>
+                            <constraint firstItem="HE4-kh-mXq" firstAttribute="centerX" secondItem="zew-xw-YyT" secondAttribute="centerX" id="zhn-jL-Bap"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="citySearchBar" destination="dKE-sg-DJg" id="i5Q-Wc-oGA"/>
-                        <outlet property="searchDisplayController" destination="sVy-a2-Xoj" id="6NY-DZ-NT7"/>
+                        <outlet property="searchBarContainerView" destination="HE4-kh-mXq" id="eSp-eG-wsS"/>
                         <outlet property="tableView" destination="u0J-uv-zGb" id="pZQ-XB-V3R"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WbU-ZE-3dw" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="sVy-a2-Xoj">
-                    <connections>
-                        <outlet property="delegate" destination="KHt-9S-t5i" id="RNF-QF-0rS"/>
-                        <outlet property="searchBar" destination="dKE-sg-DJg" id="aUj-Dc-a2d"/>
-                        <outlet property="searchContentsController" destination="KHt-9S-t5i" id="bRu-wY-40G"/>
-                        <outlet property="searchResultsDataSource" destination="KHt-9S-t5i" id="eK2-5X-gwB"/>
-                        <outlet property="searchResultsDelegate" destination="KHt-9S-t5i" id="Epq-MP-0RW"/>
-                    </connections>
-                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="284" y="273"/>
+            <point key="canvasLocation" x="283.125" y="271.47887323943661"/>
         </scene>
     </scenes>
 </document>
